Buttons list created to select the generation from the pokemons
TODO: Add the buttons funcionality to search the pokemons from the generation clicked

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
   <div class="container">
     <h1>Pokedex</h1>
+    <ul class="list">
+      <li class="list__item"><button class="list__item-button" data-button="1">Geração I</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="2">Geração II</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="3">Geração III</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="4">Geração IV</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="5">Geração V</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="6">Geração VI</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="7">Geração VII</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="8">Geração VIII</button></li>
+    </ul>
     <ul data-js="pokedex" class="pokedex"></ul>
   </div>
   
