--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <div class="container">
     <h1>Pokedex</h1>
     <ul class="list">
-      <li class="list__item"><button class="list__item-button" data-button="1">Geração I</button></li>
-      <li class="list__item"><button class="list__item-button" data-button="2">Geração II</button></li>
-      <li class="list__item"><button class="list__item-button" data-button="3">Geração III</button></li>
-      <li class="list__item"><button class="list__item-button" data-button="4">Geração IV</button></li>
-      <li class="list__item"><button class="list__item-button" data-button="5">Geração V</button></li>
-      <li class="list__item"><button class="list__item-button" data-button="6">Geração VI</button></li>
-      <li class="list__item"><button class="list__item-button" data-button="7">Geração VII</button></li>
-      <li class="list__item"><button class="list__item-button" data-button="8">Geração VIII</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="151" data-gen="1">Geração I</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="251" data-gen="2">Geração II</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="386" data-gen="3">Geração III</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="493" data-gen="4">Geração IV</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="649" data-gen="5">Geração V</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="721" data-gen="6">Geração VI</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="809" data-gen="7">Geração VII</button></li>
+      <li class="list__item"><button class="list__item-button" data-button="890" data-gen="8">Geração VIII</button></li>
     </ul>
     <ul data-js="pokedex" class="pokedex"></ul>
   </div>
